feat: expand companion management and recovery systems